ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kebernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
  labels:
    name: ingress-service
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/Platform"
        backend:
          service:
            name: platforms-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/Command/Platform"
        backend:
          service:
            name: commands-clusterip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api/User"
        backend:
          service:
            name: user-service-clusterip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api/examservice"
        backend:
          service:
            name: exam-service-clusterip-service
            port:
              number: 80        
      - pathType: Prefix
        path: "/api/Role"
        backend:
          service:
            name: user-service-clusterip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth-service-clusterip-service
            port:
              number: 3001          
      - pathType: Prefix
        path: "/socket.io"
        backend:
          service:
            name: exam-challenge-service-clusterip-service
            port: 
              number: 3005
